	due to a typo in the eval call in ppr.formula.

    o	dchisq with integer x, df and ncp sometimes gave incorrect
	results on i686 Linux.

    o   cancelling a quit caused quit() not to ask next time it was called.

    o   some complicated operations with "..." didn't work.

    o   missingness was not correctly propagated in some cases.




		CHANGES IN R VERSION 1.2.2


NEW FEATURES

    o	The Macintosh port becomes a full member of the R family and its
	sources are incorporated as from this release.	
	See `src/macintosh/INSTALL' for how that port is built.

    o	The API header files and export files `R.exp' are released under
	LGPL rather than GPL to allow dynamically loaded code to be
	distributed under licences other than GPL.

    o	postscript() and xfig() devices now make use of genuine Adobe
	afm files, and warn if characters are used in string width or
	height calculations that are not in the afm files.

    o	Configure now uses a much expanded search list for finding a
	FORTRAN 77 compiler, and no longer disallows wrapper scripts for
	this compiler.

    o	New Rd markup \method{GENERIC}{CLASS} for indicating the usage
	of methods.

    o	print.ftable() and write.ftable() now have a `digits' argument.

    o	undoc() has a new `lib.loc' argument, and its first argument is
	now called `package'.


BUG FIXES

    o	The behaviour of polygon() with NA coordinate values is now
	documented.

    o	polygon() now correctly recycles the values of border and lty.
	Thanks to Denis White.

    o	readBin() and writeBin() were not always making good use of
	long types (such as long double) when available.

    o	The C function fprec was not handling very small denormalized
	numbers correctly.  This affected the way they were printed on
	Windows, for example.

    o	legend() now draws points after lines allowing "empty dots on
	lines" thanks to Ben Bolker.

    o	Setting row/column names preserves the names of the dimnames
	(PR#809). 
