@@ -63,6 +63,8 @@ BUG FIXES
 
     o   missingness was not correctly propagated in some cases.
 
+    o   eigen() segfaulted on 0-dimensional matrices.
+
 
 
 
